# paygress

./: .env  .env.template  .gitignore  ANSIBLE_SETUP.md  COMPILATION-FIXES.md  Cargo.toml  DEPLOYMENT-GUIDE.md  DIRECT-MODULE.md  Dockerfile  Dockerfile.nginx-ingress  Dockerfile.nginx-simple-test  Dockerfile.sidecar  INGRESS-INTEGRATION.md  INGRESS-SETUP.md  LICENSE  NATIVE-PLUGINS.md  NOSTR_TOPUP_GUIDE.md  PLUGIN-STATUS.md  PRODUCTION_DEPLOYMENT.md  README-COMPLETE.md  README-NGINX-PLUGIN.md  README-SIDECAR.md  README-SIMPLE.md  README.md  SETUP_INSTRUCTIONS.md  SO-PLUGINS.md  SSH_ACCESS_FIX.md  TESTING_README.md  WASM-PLUGINS.md  ansible-setup.yml  backend.html  build-direct.sh  build-nginx-module.sh  build-nginx.sh  build-simple.sh  build-so-plugins.sh  build-wasm-plugins.sh  build.sh  cashu.db  deploy-k8s.sh  (+31 more)
.github/workflows/: docker-publish.yml
demo/: test-demo.sh
docs/: TESTING.md
examples/: nginx-import-complete.md  setup-ssh.sh  sidecar_demo.sh  traefik-import-complete.md
k8s/: complete-plugin.yaml  envoy-wasm-plugin.yaml  ingress-plugin.yaml  namespace.yaml  nginx-direct.yaml  nginx-ingress-paygress.yaml  nginx-simple.yaml  nginx-so-plugin.yaml  nginx-wasm-plugin.yaml  sidecar-service.yaml  traefik-ingress.yaml  traefik-wasm-plugin.yaml
nginx/: default.conf
nginx/conf.d/: paygress-l402.conf
scripts/: test-plugins.sh
src/: cashu.rs  complete_plugin.rs  compute.rs  discovery.rs  lib.rs  lxd.rs  main.rs  mcp_main.rs  mcp_server.rs  nginx_auth.rs  nginx_direct.rs  nginx_plugin.rs  nostr.rs  pod_provisioning.rs  provider.rs  proxmox.rs  sidecar_service.rs
src/cli/: api.rs  main.rs
src/cli/commands/: bootstrap.rs  deploy.rs  fix.rs  identity.rs  list.rs  market.rs  mod.rs  offers.rs  provider.rs  service.rs  spawn.rs  status.rs  system.rs  topup.rs
src/interfaces/: http.rs  http_l402.rs  mcp.rs  mod.rs  nostr.rs
src/mcp/: http_client.rs  mod.rs  protocol.rs  server.rs
src/nginx/: mod.rs
src/nginx_module/: mod.rs
src/plugins/: core.rs  mod.rs
src/wasm/: envoy_wasm.rs  mod.rs  nginx_wasm.rs  traefik_wasm.rs
