[package]
name = "paygress"
version = "0.1.0"
edition = "2021"
authors = ["Dhananjay Purohit <dhananjaypurohit7@gmail.com>"]
description = "Cashu payment verification and pod provisioning for ingress controllers"
license = "MIT"


# Library for embedding
[lib]
name = "paygress"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["nginx"]
nginx = ["libc"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rand = "0.8"

# Cashu dependencies
cdk-redb = "0.9.1"
cdk = "0.9.0"

# Nostr dependencies
nostr-sdk = "0.33"
tracing = "0.1"
tracing-subscriber = "0.3"

# Kubernetes dependencies
kube = { version = "0.93", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_28"] }
uuid = { version = "1.0", features = ["v4"] }

# NGINX plugin dependencies  
libc = { version = "0.2", optional = true }
chrono = { version = "0.4", features = ["serde"] }


[profile.release]
# Optimize for small binary size (important for plugins)
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

