[package]
name = "paygress"
version = "0.1.0"
edition = "2021"
authors = ["Dhananjay Purohit <dhananjaypurohit7@gmail.com>"]
description = "Cashu payment verification and pod provisioning for ingress controllers"
license = "MIT"


# Binary for sidecar service
[[bin]]
name = "paygress-sidecar"
path = "src/main.rs"

# Binary for MCP server
[[bin]]
name = "paygress-mcp-server"
path = "src/mcp_main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rand = "0.8"

# Cashu dependencies
cdk-redb = "0.9.1"
cdk = "0.9.0"

# Nostr dependencies
nostr-sdk = { version = "0.33", features = ["nip04", "nip44", "nip59"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kubernetes dependencies
kube = { version = "0.93", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_28"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"

# HTTP server dependencies
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }

# MCP server dependencies
rmcp = { version = "0.2.1", features = ["server", "transport-io", "macros"] }
async-trait = "0.1"


[profile.release]
# Optimize for small binary size  
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

